# zployment

./: biology-review.html  feedback.md  focus-feedback.html  focus-vote.html  index.html  package-lock.json  visual-check.html
.github/workflows/: append-feedback.yml  visual-check-pages.yml
assets/: momo-part-1.js  momo-part-2.js  momo-part-3.js  momo-part-4.js
genz-labor-market/: .dockerignore  .firebaserc  .gcloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  firebase.cloudrun.json  firebase.json  requirements.txt  run_all.py  streamlit_app.py
genz-labor-market/.firebase/: hosting.cHVibGlj.cache  hosting.cHVibGljX2Nsb3VkcnVu.cache
genz-labor-market/dashboard/: app.py
genz-labor-market/notebooks/: 01_acquire.ipynb  02_clean_join.ipynb  03_analysis.ipynb  04_storytelling_figures.ipynb
genz-labor-market/public/: index.html
genz-labor-market/public_cloudrun/: 404.html
genz-labor-market/reports/: genz_labor_market_report.md
genz-labor-market/src/: analysis.py  clean.py  config.py  features.py  fetch_sources.py  utils.py  viz.py
genz-labor-market/tests/: conftest.py  test_analysis_helpers.py  test_cleaning.py  test_features.py
my-streamlit-app/: README.md  app.py  pyproject.toml
my-streamlit-app/src/: app.py
my-streamlit-app/src/pages/: home.py
my-streamlit-app/tests/: test_app.py
